primitive widget build, fetch location from shared AppGroup UserDefault

--- a/WeatherZ/Localizable.xcstrings
+++ b/WeatherZ/Localizable.xcstrings
@@ -15,6 +15,9 @@
         }
       }
     },
+    "%lld°" : {
+
+    },
     "%lldm" : {
       "extractionState" : "stale",
       "localizations" : {
